@@ -1,6 +1,12 @@
 2007-08-11  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* app/tools/gimprectangletool.c
+	(gimp_rectangle_tool_button_release): Halt the tool on cancel if a
+	rectangle has not previously been created.
+
+2007-08-11  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* app/tools/gimprectangletool.c
 	(gimp_rectangle_tool_update_highlight): Renamed from
 	gimp_rectangle_tool_set_highlight
 	(gimp_rectangle_tool_button_release): Add call to
